
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buffer ;


 int BUFFER_SIZE ;
 int FASTDEF (int ) ;
 int FAST_SCALED_FLOAT_TO_INT (int ,float,int) ;
 int** channel_position ;
 int check_endianness () ;
 int memset (float*,int ,int) ;
 int temp ;

__attribute__((used)) static void compute_samples(int mask, short *output, int num_c, float **data, int d_offset, int len)
{

   float buffer[32];
   int i,j,o,n = 32;
   check_endianness();
   for (o = 0; o < len; o += 32) {
      memset(buffer, 0, sizeof(buffer));
      if (o + n > len) n = len - o;
      for (j=0; j < num_c; ++j) {
         if (channel_position[num_c][j] & mask) {
            for (i=0; i < n; ++i)
               buffer[i] += data[j][d_offset+o+i];
         }
      }
      for (i=0; i < n; ++i) {
         FASTDEF(temp);
         int v = FAST_SCALED_FLOAT_TO_INT(temp,buffer[i],15);
         if ((unsigned int) (v + 32768) > 65535)
            v = v < 0 ? -32768 : 32767;
         output[o+i] = v;
      }
   }
}
